--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,11 +17,11 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 180px;
+  height: 40px;
   margin-top: 64px;
   padding-top: 90px;
   background-color:lightskyblue;
   box-sizing: border-box;
-  color: #fff;
+  color: rgb(2, 1, 1);
   text-align: center;
 }
