--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,8 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 /* users/index ================================ */
 .users-heading {
   font-weight: 300;
@@ -6,14 +11,14 @@
   color: #bcc8d4;
 }
 
-.users-index-item {
-  padding: 20px 30px;
-  background-color: white;
-  overflow: hidden;
-  box-shadow: 0 2px 6px #c1ced7;
-  display: table;
-  width: 100%;
-}
+// .users-index-item {
+//   padding: 20px 30px;
+//   background-color: white;
+//   overflow: hidden;
+//   box-shadow: 0 2px 6px #c1ced7;
+//   display: table;
+//   width: 100%;
+// }
 
 .user-left img {
   width: 50px;
@@ -113,4 +118,90 @@
 /* users/new, users/edit ================================ */
 .users-form input {
   margin-bottom: 15px;
+}
+
+// ハンバーガメニュ
+
+nav {
+  position: relative;
+  width: 200px;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.lable_ham{
+  width: 30px;
+  height: 30px;
+  border: 1px solid black;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 1000;
+}
+
+span {
+  width: 20px;
+  height: 1px;
+  background-color: black;
+  position: absolute;
+  right: 15px;
+  transition: .3s;
+  z-index: 100;
+}
+
+.span1 {
+  top: 20px;
+}
+
+.span2 {
+  top: 27px;
+}
+
+.span3 {
+  top: 34px;
+}
+
+#check:checked ~ .span2 {
+  display: none;
+}
+
+#check:checked ~ .span1 {
+  width: 27px;
+  transform: rotate(45deg);
+  top: 27px;
+  right: 12px;
+}
+
+#check:checked ~ .span3 {
+  width: 27px;
+  transform: rotate(-45deg);
+  top: 27px;
+  right: 12px;
+}
+
+#check {
+  display: none;
+}
+
+ul {
+  width: 100%;
+  height: 100%;
+  background-color: #2a9ee04a;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  list-style: none;
+  position: absolute;
+  top: 0;
+  right: -100%;
+  transition: 1s;
+  z-index: 10;
+}
+
+li {
+  margin-top: 20px;
+}
+
+#check:checked ~ ul {
+  right: 0;
 }
