--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,13 +8,16 @@
               <%= message %>
             </div>
         <% end %>
-        <%= form_tag("/users/#{@user.id}/update") do %>
-          <p>ユーザー名</p>
-          <input value="<%= @user.name %>">
-          <p>メールアドレス</p>
-          <input value="<%= @user.email %>">
-          <input type="submit" value="保存">
-          <p><%= link_to("ユーザー一覧に戻る" , "/users/index")%></p>
+        <%= form_with model: @user do |f| %>
+        <%= f.label :name ,"ユーザー名" %><br>
+        <%= f.text_field :name %><br>
+        <%= f.label :image ,"画像" %><br>
+        <%= f.file_field :image %><br>
+        <%= f.label :email ,"メールアドレス" %><br>
+        <%= f.text_field :email %><br>
+        <%= f.label :password ,"パスワード" %><br>
+        <%= f.text_field :password %>
+        <%= f.submit "編集する"%>
         <% end %>
       </div>
     </div>
