プルリク希望

--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -25,7 +25,7 @@
             <td><%= room.room_memo %></td>
             <%end%>
             <% @hotels.each do |hotel| %>
-            <td><%= hotel.price %></td>
+            <td><%= hotel.total_price %></td>
             <td><%= hotel.start_day%></td>
             <td><%= hotel.end_day %></td>
           </tr>
