--- a/app/views/hotels/new.html.erb
+++ b/app/views/hotels/new.html.erb
@@ -4,9 +4,12 @@
       <div class="c">
         <h4 class="hotels-new-check-content">予約内容確認</h4>
         <h5 class="price-icon"><%= @room.room_price %>円</h5>
+        <h5>使用日数<%= @hotel.total_days %></h5>
+        <h5>合計金額<%= @hotel.total_price %>円</h5>
         <%= form_with model: @hotel do |f| %>
           <div class="hotels-new-date-select">
             <%= f.hidden_field :room_id,value: "#{params[:room_id]}"%>
+            <%= f.hidden_field :total_price ,value:@hotel.total_price %>
             <%#= f.text_field :user_id,value: "#{params[:id]}"%>
             <%= f.label :開始日, class: "label" %><br>
             <%= f.text_field :start_day, readonly: true %><br>
