--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -1,9 +1,10 @@
 <div class="room_main">
-  <h4>検索結果</h4>
+  <h2 class="kensaku">検索結果 :
+  <%= Room.where('room_name LIKE ? OR room_area LIKE ? OR room_memo LIKE ?',"%#{params[:search]}%","%#{params[:search]}%","%#{params[:search]}%").count %>
+件</h2>
   <div class="row">
   <% @rooms.each do |room| %>
     <div class="room-frame-inner">
-      <%# <a href="room"> %>
       <div class="room-image-out">
       <% if room.image.attached? %>
         <%= image_tag room.image, class: "image" %>
@@ -16,7 +17,6 @@
         <%= link_to "削除", room, method: :delete, data: { confirm: "本当に削除しますか？" } %>
       </div>
       <% end  %>
-      <%# </a> %>
     </div>
   </div>
 </div>
