--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -14,21 +14,20 @@
       <% @rooms.each do |room| %>
         <tr>
           <td>
-            <% if room.image.attached? %>
-              <%= image_tag room.image, class: "image" %>
+            <% if room.image.attached? %><%= image_tag room.image, class: "image" %>
             <% end %>
           </td>
           <td>
-              <%= room.room_name %><br>
-              <%= link_to "確認", room %>
-            </td>
-            <td><%= room.room_memo %></td>
-            <%end%>
-            <% @hotels.each do |hotel| %>
-            <td><%= hotel.total_price %></td>
-            <td><%= hotel.start_day%></td>
-            <td><%= hotel.end_day %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+            <%= room.room_name %><br>
+            <%= link_to "確認", room %>
+          </td>
+          <td><%= room.room_memo %></td>
+        <%end%>
+        <% @hotels.each do |hotel| %>
+          <td><%= hotel.total_price %></td>
+          <td><%= hotel.start_day%></td>
+          <td><%= hotel.end_day %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
